--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:watch": "yarn test -- --watchAll --coverage"
   },
   "devDependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^25.1.2",
     "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
