--- a/package.json
+++ b/package.json
@@ -1,52 +1,97 @@
 {
   "name": "@hookform/resolvers",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
-  "main": "dist/resolvers.js",
-  "module": "dist/resolvers.es.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "umd:main": "dist/index.umd.min.js",
+  "unpkg": "dist/index.umd.min.js",
+  "jsdelivr": "dist/index.umd.min.js",
+  "jsnext:main": "index.esm.js",
   "types": "dist/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/react-hook-form/resolvers.git"
-  },
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "clean": "rimraf dist",
+    "build": "npm run clean && rollup -c",
+    "lint": "eslint '**/*.{js,ts}'",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:types": "tsc --noEmit",
+    "test": "jest --runInBand",
+    "test:watch": "npm run test -- --watchAll --coverage",
+    "prepublishOnly": "npm run lint && npm run lint:types && npm test && npm run build"
+  },
+  "keywords": [
+    "scheme",
+    "validation",
+    "scheme-validation",
+    "hookform",
+    "react-hook-form",
+    "yup",
+    "joi",
+    "sperstruct",
+    "typescript"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/react-hook-form/resolvers.git"
+  },
   "author": "bluebill1049 <bluebill1049@hotmail.com>",
   "license": "MIT",
-  "scripts": {
-    "clean": "rm -rf dist",
-    "build": "rollup -c",
-    "prepublishOnly": "yarn lint && yarn test && yarn run clean && yarn build",
-    "test": "jest --runInBand",
-    "lint": "yarn lint:check --fix && yarn prettier",
-    "prettier": "prettier --write './src/**/*.ts' './src/**/*.tsx' --config ./.prettierrc",
-    "lint:check": "eslint ./src --ext .jsx,.ts --ignore-pattern *.test.ts --report-unused-disable-directives",
-    "test:watch": "yarn test -- --watchAll --coverage"
-  },
-  "devDependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@types/hapi__joi": "^17.1.0",
-    "@types/jest": "^25.1.2",
-    "@types/yup": "^0.28.0",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "eslint": "^6.8.0",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
-    "react": "^16.13.1",
-    "rollup": "^1.31.0",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "superstruct": "^0.8.3",
-    "ts-jest": "^25.2.0",
-    "typescript": "^3.7.5",
-    "yup": "^0.28.5"
-  },
-  "dependencies": {
-    "react-hook-form": "6.0.0-beta.2"
-  },
   "bugs": {
     "url": "https://github.com/react-hook-form/resolvers/issues"
   },
-  "homepage": "https://github.com/react-hook-form/resolvers#readme"
+  "homepage": "https://github.com/react-hook-form/resolvers#readme",
+  "devDependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@types/hapi__joi": "^17.1.0",
+    "@types/jest": "^26.0.0",
+    "@types/yup": "^0.29.3",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.10",
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-hook-form": "^6.0.0-rc.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.16.1",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-sourcemaps": "^0.6.2",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "superstruct": "^0.8.3",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.7.5",
+    "yup": "^0.29.1"
+  },
+  "peerDependencies": {
+    "react-hook-form": ">=6.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:types && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "npm run lint:fix"
+    ],
+    "*.{md,json}": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
