--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "app"]
+  "exclude": ["src/**/*.test.js", "src/**/*.test.ts"]
 }
