--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hookform/resolvers",
   "version": "0.0.5",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Nope and etc.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "umd:main": "dist/index.umd.min.js",
@@ -64,6 +64,7 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
+    "nope-validator": "^0.11.3",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-hook-form": "^6.0.0-rc.4",
