--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "umd:main": "dist/index.umd.development.js",
-  "unpkg": "dist/index.umd.development.js",
-  "jsdelivr": "dist/index.umd.development.js",
+  "umd:main": "dist/index.umd.production.min.js",
+  "unpkg": "dist/index.umd.production.min.js",
+  "jsdelivr": "dist/index.umd.production.min.js",
   "jsnext:main": "dist/index.esm.js",
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
