--- a/package.json
+++ b/package.json
@@ -93,9 +93,8 @@
     "*.{js,ts}": [
       "npm run lint:fix"
     ],
-    "*.{md,json}": [
-      "prettier --write",
-      "git add"
+    "*.{md,json,yml}": [
+      "prettier --write"
     ]
   }
 }
