improve rollup config (#25)
* improve rollup config

* update package.json

* update package.json

* improve createRollupConfig

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "umd:main": "dist/index.umd.min.js",
-  "unpkg": "dist/index.umd.min.js",
-  "jsdelivr": "dist/index.umd.min.js",
+  "umd:main": "dist/index.umd.production.min.js",
+  "unpkg": "dist/index.umd.production.min.js",
+  "jsdelivr": "dist/index.umd.production.min.js",
   "jsnext:main": "dist/index.esm.js",
+  "source": "src/index.ts",
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "files": [
@@ -18,7 +19,8 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && rollup -c",
+    "prebuild": "npm run clean",
+    "build": "node rollup/writeCjsEntryFile.js && rollup -c",
     "lint": "eslint '**/*.{js,ts}'",
     "lint:fix": "npm run lint -- --fix",
     "lint:types": "tsc --noEmit",
@@ -53,6 +55,7 @@
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
+    "@rollup/plugin-replace": "^2.3.3",
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^26.0.0",
     "@types/yup": "^0.29.3",
@@ -90,9 +93,8 @@
     "*.{js,ts}": [
       "npm run lint:fix"
     ],
-    "*.{md,json}": [
-      "prettier --write",
-      "git add"
+    "*.{md,json,yml}": [
+      "prettier --write"
     ]
   }
 }
