--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "module": "es2015",
-    "target": "es2017",
+    "module": "esnext",
+    "target": "es5",
     "moduleResolution": "node",
     "outDir": "./dist",
     "jsx": "react",
