Revert "change target ES2017 to es5 (#40)"
This reverts commit a4ea13750e82fa3829a982f729c4a33d3c0851ea.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "module": "esnext",
-    "target": "es5",
+    "module": "es2015",
+    "target": "es2017",
     "moduleResolution": "node",
     "outDir": "./dist",
     "jsx": "react",
