--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "hookform",
     "react-hook-form",
     "yup",
+    "json-schema",
+    "ajv",
     "joi",
     "sperstruct",
     "typescript"
@@ -54,10 +56,11 @@
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^26.0.0",
+    "@types/json-schema": "^7.0.6",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.4",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
