--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true
   },
   "include": ["src"],
   "exclude": ["src/**/*.test.js", "src/**/*.test.ts"]
