removed the need for '"esModuleInterop": true' in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
   "exclude": ["src/**/*.test.js", "src/**/*.test.ts"]
