--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hookform/resolvers",
   "version": "0.2.0-beta.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod and etc.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "umd:main": "dist/index.umd.production.min.js",
@@ -40,7 +40,8 @@
     "ajv",
     "joi",
     "sperstruct",
-    "typescript"
+    "typescript",
+    "zod"
   ],
   "repository": {
     "type": "git",
@@ -83,7 +84,8 @@
     "superstruct": "^0.8.3",
     "ts-jest": "^26.1.0",
     "typescript": "^3.7.5",
-    "yup": "^0.29.1"
+    "yup": "^0.29.1",
+    "zod": "^1.11.5"
   },
   "peerDependencies": {
     "react-hook-form": ">=6.6.0"
