changed the validation libraries from devDeps to deps

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@hapi/joi": "^17.1.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
@@ -60,7 +59,6 @@
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
-    "ajv": "^6.12.4",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -76,13 +74,17 @@
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
-    "superstruct": "^0.8.3",
     "ts-jest": "^26.1.0",
-    "typescript": "^3.7.5",
-    "yup": "^0.29.1"
+    "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "react-hook-form": ">=6.0.0"
+  },
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "ajv": "^6.12.5",
+    "superstruct": "^0.8.3",
+    "yup": "^0.29.3"
   },
   "husky": {
     "hooks": {
