--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@hookform/resolvers",
   "version": "0.2.0-beta.1",
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "umd:main": "dist/index.umd.production.min.js",
-  "unpkg": "dist/index.umd.production.min.js",
-  "jsdelivr": "dist/index.umd.production.min.js",
-  "jsnext:main": "dist/index.esm.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "umd:main": "dist/umd/index.production.min.js",
+  "unpkg": "dist/umd/index.production.min.js",
+  "jsdelivr": "dist/umd/index.production.min.js",
+  "jsnext:main": "dist/esm/index.js",
   "source": "src/index.ts",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist"
