--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "node rollup/writeDeclarationFiles.js && node rollup/writeCjsEntryFile.js && rollup -c",
+    "build": "cpy package.json README.md dist/ && node rollup/writeCjsEntryFile.js && rollup -c",
     "lint": "eslint '**/*.{js,ts}'",
     "lint:fix": "npm run lint -- --fix",
     "lint:types": "tsc --noEmit",
@@ -62,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "chalk": "^4.1.0",
+    "cpy-cli": "^3.1.1",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
