--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "@hookform/resolvers",
   "version": "0.2.0-beta.1",
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "umd:main": "dist/umd/index.production.min.js",
-  "unpkg": "dist/umd/index.production.min.js",
-  "jsdelivr": "dist/umd/index.production.min.js",
-  "jsnext:main": "dist/esm/index.js",
+  "main": "cjs/index.js",
+  "module": "index.js",
+  "umd:main": "umd/index.production.min.js",
+  "unpkg": "umd/index.production.min.js",
+  "jsdelivr": "umd/index.production.min.js",
+  "jsnext:main": "esm/index.js",
   "source": "src/index.ts",
-  "types": "dist/types/index.d.ts",
+  "types": "index.d.ts",
   "sideEffects": false,
   "files": [
-    "dist"
+    "*"
   ],
   "publishConfig": {
     "access": "public"
