chore: improve rollup config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "isolatedModules": true
   },
   "include": ["src"],
-  "exclude": ["src/**/*.test.js", "src/**/*.test.ts"]
+  "exclude": ["src/**/*.test.js", "src/**/*.test.ts", "src/index.ts"]
 }
