--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "@hookform/resolvers",
   "version": "0.2.0-beta.1",
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
-  "main": "cjs/index.js",
-  "module": "index.js",
-  "umd:main": "umd/index.production.min.js",
-  "unpkg": "umd/index.production.min.js",
-  "jsdelivr": "umd/index.production.min.js",
-  "jsnext:main": "esm/index.js",
-  "source": "src/index.ts",
-  "types": "index.d.ts",
+  "umd:main": "umd/index.js",
+  "unpkg": "umd/index.js",
+  "jsdelivr": "umd/index.js",
   "sideEffects": false,
   "files": [
     "*"
@@ -20,7 +15,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "cpy package.json README.md dist/ && node rollup/writeCjsEntryFile.js && rollup -c",
+    "build": "cpy package.json README.md dist/ && rollup -c",
     "lint": "eslint '**/*.{js,ts}'",
     "lint:fix": "npm run lint -- --fix",
     "lint:types": "tsc --noEmit",
@@ -54,8 +49,8 @@
     "@hapi/joi": "^17.1.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
-    "@rollup/plugin-replace": "^2.3.3",
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^26.0.0",
     "@types/yup": "^0.29.3",
