Fix modules resolution (#60)
* chore(deps): add chalk

* chore: update bundles paths

* feat: write declaration files (/dist/types)

* chore: disable declaration files

* feat: generate bundles with preserve modules

* refactor: remove useless code

* refactor: output dir generation

* fix: types module resolution (superstruct)

* chore: add & use cpy

* chore: new bundle generation

* refactor: remove useless code

* chore: yarn remove useless code

* chore: update bundle format paths

* chore: generate declaration files for esm only

* refactor: remove chalk

* refactor: remove useless code

* chore: improve rollup config

* refactor: remove useless files

* chore(deps): remove useless deps

* build: new logic (cjs,ie11,umd) + nested imports

--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "@hookform/resolvers",
   "version": "0.2.0-beta.1",
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "umd:main": "dist/index.umd.production.min.js",
-  "unpkg": "dist/index.umd.production.min.js",
-  "jsdelivr": "dist/index.umd.production.min.js",
-  "jsnext:main": "dist/index.esm.js",
-  "source": "src/index.ts",
-  "types": "dist/index.d.ts",
+  "umd:main": "umd/index.js",
+  "unpkg": "umd/index.js",
+  "jsdelivr": "umd/index.js",
   "sideEffects": false,
   "files": [
-    "dist"
+    "dist",
+    "yup.js",
+    "yup.d.ts",
+    "joi.js",
+    "joi.d.ts",
+    "superstruct.js",
+    "superstruct.d.ts"
   ],
   "publishConfig": {
     "access": "public"
@@ -20,7 +21,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "node rollup/writeCjsEntryFile.js && rollup -c",
+    "build": "run-p bundle bundle:ie11 bundle:umd",
+    "bundle": "tsc",
+    "bundle:ie11": "tsc --outDir dist/ie11 --downlevelIteration --target es5",
+    "bundle:umd": "rollup -c",
     "lint": "eslint '**/*.{js,ts}'",
     "lint:fix": "npm run lint -- --fix",
     "lint:types": "tsc --noEmit",
@@ -53,9 +57,7 @@
   "devDependencies": {
     "@hapi/joi": "^17.1.1",
     "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
-    "@rollup/plugin-replace": "^2.3.3",
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^26.0.0",
     "@types/yup": "^0.29.3",
@@ -67,13 +69,12 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.16.1",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "superstruct": "^0.8.3",
