--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hookform/resolvers",
-  "version": "0.2.0-beta.1",
+  "version": "1.0.0-rc.1",
   "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct and etc.",
   "umd:main": "umd/index.js",
   "unpkg": "umd/index.js",
