--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "run-p bundle bundle:ie11 bundle:umd",
-    "bundle": "tsc",
-    "bundle:ie11": "tsc --outDir dist/ie11 --downlevelIteration --target es5",
-    "bundle:umd": "rollup -c",
+    "build": "tsc && rollup -c",
     "lint": "eslint '**/*.{js,ts}'",
     "lint:fix": "npm run lint -- --fix",
     "lint:types": "tsc --noEmit",
@@ -72,6 +69,7 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
+    "matched": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
