--- a/package.json
+++ b/package.json
@@ -55,10 +55,8 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@hapi/joi": "^17.1.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
-    "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^26.0.0",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
@@ -68,6 +66,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "joi": "^17.3.0",
     "lint-staged": "^10.2.10",
     "matched": "^5.0.0",
     "npm-run-all": "^4.1.5",
@@ -99,5 +98,6 @@
     "*.{md,json,yml}": [
       "prettier --write"
     ]
-  }
+  },
+  "dependencies": {}
 }
