--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "superstruct": "^0.8.3",
     "ts-jest": "^26.1.0",
     "typescript": "^3.7.5",
+    "vest": "^2.2.3",
     "yup": "^0.29.1",
     "zod": "^1.11.5"
   },
