--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs"
-  }
+    "module": "commonjs",
+    "strictNullChecks": true
+  },
+  "include": ["src/**/*.test.ts"]
 }
