--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "superstruct.js",
     "superstruct.d.ts",
     "zod.js",
-    "zod.d.ts"
+    "zod.d.ts",
+    "vest.js",
+    "vest.d.ts"
   ],
   "publishConfig": {
     "access": "public"
@@ -81,6 +83,7 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
     "yup": "^0.31.0",
+    "vest": "^2.2.3",
     "zod": "^1.11.10"
   },
   "peerDependencies": {
