--- a/package.json
+++ b/package.json
@@ -24,16 +24,13 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn clean",
     "build": "tsc && rollup -c",
     "lint": "eslint '**/*.{js,ts}'",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn lint -- --fix",
     "lint:types": "tsc --noEmit",
     "test": "jest --runInBand",
-    "test:watch": "npm run test -- --watchAll --coverage",
-    "postversion": "git push && git push origin v$npm_package_version",
-    "prepublishOnly": "npm run lint && npm run lint:types && npm test && npm run build",
-    "release": "yarn build && changeset publish"
+    "test:watch": "yarn test --watchAll --coverage"
   },
   "keywords": [
     "scheme",
@@ -58,8 +55,6 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@changesets/changelog-github": "^0.2.7",
-    "@changesets/cli": "^2.12.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@types/jest": "^26.0.19",
@@ -82,6 +77,7 @@
     "rollup": "^2.35.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
+    "semantic-release": "^17.3.1",
     "superstruct": "^0.13.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
@@ -92,14 +88,19 @@
   "peerDependencies": {
     "react-hook-form": ">=6.6.0"
   },
+  "release": {
+    "branches": [
+      "master"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:types && lint-staged"
+      "pre-commit": "yarn lint:types && lint-staged"
     }
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "npm run lint:fix"
+      "yarn lint:fix"
     ],
     "*.{md,json,yml}": [
       "prettier --write"
