--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "access": "public"
   },
   "scripts": {
-    "prepare": "run-s build & check-export-map",
+    "prepare": "run-s build && check-export-map",
     "build": "npm-run-all --parallel build:*",
     "build:src": "microbundle build",
     "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
