--- a/package.json
+++ b/package.json
@@ -109,7 +109,11 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
+    "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "check-export-map": "^1.0.1",
@@ -124,6 +128,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
     "semantic-release": "^17.3.1",
     "superstruct": "^0.13.1",
