chore: fix TypeScript error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "noFallthroughCasesInSwitch": true,
     "strictNullChecks": true,
     "isolatedModules": true,
-    "jsx": "react"
+    "jsx": "react",
+    "paths": {
+      "@hookform/resolvers": ["."]
+    }
   }
 }
