--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "access": "public"
   },
   "scripts": {
-    "prepare": "run-s build && check-export-map",
+    "prepare": "run-s build:src build && check-export-map",
     "build": "npm-run-all --parallel build:*",
     "build:src": "microbundle build",
     "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
@@ -111,13 +111,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
+    "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "check-export-map": "^1.0.1",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
@@ -129,12 +129,12 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^7.0.0-alpha.0",
-    "semantic-release": "^17.3.6",
-    "superstruct": "^0.13.3",
-    "ts-jest": "^26.4.4",
+    "react-hook-form": "^7.0.0-alpha.2",
+    "semantic-release": "^17.3.7",
+    "superstruct": "^0.14.0",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3",
-    "vest": "^3.1.1",
+    "vest": "^3.1.2",
     "yup": "^0.32.8",
     "zod": "^1.11.11"
   },
