--- a/vest/package.json
+++ b/vest/package.json
@@ -11,6 +11,8 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "peerDependencies": {
-    "react-hook-form": ">=6.6.0"
+    "react-hook-form": ">=6.6.0",
+    "@hookform/resolvers": ">=2.0.0",
+    "vest": ">=3.0.0"
   }
 }
