--- a/superstruct/package.json
+++ b/superstruct/package.json
@@ -13,6 +13,6 @@
   "peerDependencies": {
     "react-hook-form": ">=6.6.0",
     "@hookform/resolvers": "^1.0.0",
-    "superstruct": ">+0.12.0"
+    "superstruct": ">=0.12.0"
   }
 }
