--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
     "build": "npm-run-all --parallel build:*",
     "build:src": "microbundle build",
     "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
-    "build:yup": "microbundle --cwd yup",
+    "build:yup": "microbundle --cwd yup --globals '@hookform/resolvers=hookformResolvers'",
     "build:joi": "microbundle --cwd joi --globals '@hookform/resolvers=hookformResolvers'",
     "build:superstruct": "microbundle --cwd superstruct --globals '@hookform/resolvers=hookformResolvers'",
-    "build:vest": "microbundle --cwd vest",
+    "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
