--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "access": "public"
   },
   "scripts": {
-    "prepare": "run-s build:src build && check-export-map",
+    "prepare": "run-s build:src build && check-export-map && node ./config/check-ie11.js",
     "build": "npm-run-all --parallel build:*",
     "build:src": "microbundle build",
     "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
@@ -79,7 +79,8 @@
     "build:joi": "microbundle --cwd joi --globals '@hookform/resolvers=hookformResolvers'",
     "build:superstruct": "microbundle --cwd superstruct --globals '@hookform/resolvers=hookformResolvers'",
     "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
-    "postbuild": "node ./config/node-13-exports.js",
+    "build:ie11": "node ./config/build-ie11",
+    "postbuild": "node ./config/node-13-exports.js && node ./config/check-ie11.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
     "test": "jest",
@@ -122,6 +123,7 @@
     "joi": "^17.3.0",
     "lint-staged": "^10.5.3",
     "microbundle": "^0.13.0",
+    "move-file": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
@@ -154,6 +156,5 @@
     "*.{md,json,yml}": [
       "prettier --write"
     ]
-  },
-  "dependencies": {}
+  }
 }
