--- a/package.json
+++ b/package.json
@@ -118,12 +118,12 @@
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "fs-extra": "^9.1.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "joi": "^17.3.0",
     "lint-staged": "^10.5.3",
     "microbundle": "^0.13.0",
-    "move-file": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
