--- a/yup/package.json
+++ b/yup/package.json
@@ -12,6 +12,6 @@
   "license": "MIT",
   "peerDependencies": {
     "react-hook-form": ">=6.6.0",
-    "@hookform/resolvers": "^1.0.0"
+    "@hookform/resolvers": ">=2.0.0"
   }
 }
