--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "1.3.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod and etc.",
-  "sideEffects": false,
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest and etc.",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -71,7 +70,7 @@
     "access": "public"
   },
   "scripts": {
-    "prepare": "run-s build:src build && check-export-map && node ./config/check-ie11.js",
+    "prepare": "run-s build:src build && check-export-map",
     "build": "npm-run-all --parallel build:*",
     "build:src": "microbundle build",
     "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
@@ -79,8 +78,7 @@
     "build:joi": "microbundle --cwd joi --globals '@hookform/resolvers=hookformResolvers'",
     "build:superstruct": "microbundle --cwd superstruct --globals '@hookform/resolvers=hookformResolvers'",
     "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
-    "build:ie11": "node ./config/build-ie11",
-    "postbuild": "node ./config/node-13-exports.js && node ./config/check-ie11.js",
+    "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
     "test": "jest",
@@ -97,7 +95,8 @@
     "joi",
     "superstruct",
     "typescript",
-    "zod"
+    "zod",
+    "vest"
   ],
   "repository": {
     "type": "git",
@@ -110,16 +109,18 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.3",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "check-export-map": "^1.0.1",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "fs-extra": "^9.1.0",
-    "husky": "^4.3.6",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "joi": "^17.3.0",
     "lint-staged": "^10.5.3",
@@ -127,22 +128,18 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-hook-form": "^6.13.1",
-    "semantic-release": "^17.3.1",
-    "superstruct": "^0.13.1",
-    "ts-jest": "^26.4.4",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^7.0.0-alpha.2",
+    "semantic-release": "^17.3.7",
+    "superstruct": "^0.14.0",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3",
-    "vest": "^2.2.3",
+    "vest": "^3.1.2",
     "yup": "^0.32.8",
     "zod": "^1.11.11"
   },
   "peerDependencies": {
-    "react-hook-form": ">=6.6.0"
-  },
-  "release": {
-    "branches": [
-      "master"
-    ]
+    "react-hook-form": "^7.0.0"
   },
   "husky": {
     "hooks": {
