--- a/vest/package.json
+++ b/vest/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "peerDependencies": {
     "react-hook-form": ">=6.6.0",
-    "@hookform/resolvers": "^1.0.0"
+    "@hookform/resolvers": ">=2.0.0",
+    "vest": ">=3.0.0"
   }
 }
