--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches:
       - master
-      - '1.x'
+      - beta
+      - 1.x
   pull_request:
     paths-ignore:
       - '.gitignore'
@@ -41,7 +42,7 @@ jobs:
   publish-module:
     name: 'Publish Module to NPM on Node ${{ matrix.node }} and ${{ matrix.os }}'
     needs: build
-    if: github.repository == 'react-hook-form/resolvers' && (github.ref =='refs/heads/master' || github.ref == 'refs/heads/1.x')
+    if: github.repository == 'react-hook-form/resolvers' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta' || github.ref == 'refs/heads/1.x')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
