--- a/class-validator/package.json
+++ b/class-validator/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "peerDependencies": {
     "react-hook-form": ">=6.6.0",
-    "@hookform/resolvers": ">=2.0.0"
+    "@hookform/resolvers": ">=2.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.12.0"
   }
 }
